syntax = "proto3";

package idl;

service CliToHub {
    rpc Ping(PingRequest) returns (PingReply) {}
    rpc StatusUpgrade(StatusUpgradeRequest) returns (StatusUpgradeReply) {}
    rpc CheckConfig(CheckConfigRequest) returns (CheckConfigReply) {}
    rpc CheckSeginstall(CheckSeginstallRequest) returns (CheckSeginstallReply) {}
    rpc CheckObjectCount(CheckObjectCountRequest) returns (CheckObjectCountReply) {}
    rpc CheckVersion(CheckVersionRequest) returns (CheckVersionReply) {}
    rpc CheckDiskUsage(CheckDiskUsageRequest) returns (CheckDiskUsageReply) {}
    rpc PrepareInitCluster(PrepareInitClusterRequest) returns (PrepareInitClusterReply) {}
    rpc PrepareShutdownClusters(PrepareShutdownClustersRequest) returns (PrepareShutdownClustersReply) {}
    rpc UpgradeConvertMaster(UpgradeConvertMasterRequest) returns (UpgradeConvertMasterReply) {}
}

message PingRequest {
}
message PingReply {}

message StatusUpgradeRequest {}

message StatusUpgradeReply {
    repeated UpgradeStepStatus listOfUpgradeStepStatuses = 1;
}

message UpgradeStepStatus {
    UpgradeSteps step = 1;
    StepStatus status = 2;
}

enum UpgradeSteps {
    UNKNOWN_STEP = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    CHECK_CONFIG = 1;
    SEGINSTALL = 2;
    PREPARE_INIT_CLUSTER = 3;
    MASTERUPGRADE = 4;
    STOPPED_CLUSTER = 5;
}

enum StepStatus {
    UNKNOWN_STATUS = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    PENDING = 1;
    RUNNING = 2;
    COMPLETE = 3;
    FAILED = 4;
}

message CheckConfigRequest {
    int32 dbPort = 1;
}

// Consider removing the status as errors are/should be put on the error field.
message CheckConfigReply {
    string configStatus  = 1;
}

message CheckSeginstallRequest {}
message CheckSeginstallReply {}

message CountPerDb {
    string DbName = 1;
    int32 AoCount = 2;
    int32 HeapCount = 3;
}
message CheckObjectCountRequest {
    int32 DbPort = 1;
}

message CheckObjectCountReply {
    repeated CountPerDb list_of_counts = 1;
}

message CheckVersionRequest {
    int32 DbPort = 1;
    string Host = 2;
}

message CheckVersionReply {
    bool IsVersionCompatible = 1;
}

message CheckDiskUsageRequest {}

message CheckDiskUsageReply {
    repeated string SegmentFileSysUsage = 1;
}

message PrepareShutdownClustersRequest {
    string oldBinDir = 1;
    string newBinDir = 2;
}
message PrepareShutdownClustersReply {}

message PrepareInitClusterRequest {
    int32 dbPort = 1;
}
message PrepareInitClusterReply {}

message UpgradeConvertMasterRequest {
    string OldBinDir = 1;
    string OldDataDir = 2;
    string NewBinDir = 3;
    string NewDataDir = 4;
}

message UpgradeConvertMasterReply {}
